--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enyss Production - Portfolio</title>
-    <link rel="shortcut icon" href="https://media.discordapp.net/attachments/1242068166574604331/1243961077210026204/UDC.png" type="image/x-icon">
+    <link rel="shortcut icon" href="ENYSSIMG.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
         body {
@@ -110,7 +110,7 @@
         }
 
         .nav-links a:hover {
-            color: #7289DA;
+            color: #a212b5;
         }
 
         .container {
