--- a/index.html
+++ b/index.html
@@ -256,25 +256,6 @@
 
 .game-card {
     position: relative;
-}
-
-.contribution-text {
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #b5b5b5; 
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 0.9rem;
-    font-weight: bold;
-    z-index: 2;
-    text-transform: uppercase;
-}
-
-.game-card {
-    position: relative;
     width: 300px;
     height: 400px;
     border-radius: 15px;
@@ -533,67 +514,61 @@
         <p>These are the games I produce for.</p>
 
             <div class="game-cards">
-    <!-- Game 1 -->
-    <div class="game-card">
-        <div class="contribution-text">Contributed</div>
-        <img src="BackroomsOfR.webp" alt="Backrooms Of Reality">
-        <div class="game-info">
-            <h3>Backrooms Of Reality</h3>
-            <p>Ambient/Liminal OST</p>
-            <div class="visits">1.6M+</div>
-        </div>
-    </div>
-    <!-- Game 2 -->
-    <div class="game-card">
-        <div class="contribution-text">Contributed</div>
-        <img src="noFilter.webp" alt="Missing Elvira">
-        <div class="game-info">
-            <h3>Missing Elvira</h3>
-            <p>Horror/Creepy OST</p>
-            <div class="visits">4.2M+</div>
-        </div>
-    </div>
-    <!-- Game 3 -->
-    <div class="game-card">
-        <div class="contribution-text">Negociating</div>
-        <img src="ProjUntote.webp" alt="Project Untote">
-        <div class="game-info">
-            <h3>Project Untote</h3>
-            <p>Epic/War OST</p>
-            <div class="visits">741.2K+</div>
-        </div>
-    </div>
-    <!-- Game 4 -->
-    <div class="game-card">
-        <div class="contribution-text">Full-time/div>
-        <img src="AreaX.webp" alt="Area X">
-        <div class="game-info">
-            <h3>SCP : Area X Roleplay</h3>
-            <p>Military/Ambient OST</p>
-            <div class="visits">112.7K+</div>
-        </div>
-    </div>
-    <!-- Game 5 -->
-    <div class="game-card">
-        <div class="contribution-text">Contributed</div>
-        <img src="Omneasia.png" alt="Omneasia">
-        <div class="game-info">
-            <h3>Omnéasia</h3>
-            <p>Fantasy/Epic OST</p>
-            <div class="visits">Upcoming</div>
-        </div>
-    </div>
-    <!-- Game 6 -->
-    <div class="game-card">
-        <div class="contribution-text">Contributed</div>
-        <img src="CyberLeap.png" alt="CyberLeap">
-        <div class="game-info">
-            <h3>CyberLeap</h3>
-            <p>Adventure/Synthwave OST</p>
-            <div class="visits">Upcoming</div>
-        </div>
-    </div>
-</div>
+                <!-- Game -->
+                <div class="game-card">
+                    <img src="BackroomsOfR.webp" alt="Backrooms Of Reality">
+                    <div class="game-info">
+                        <h3>Backrooms Of Reality</h3>
+                        <p>Ambient/Liminal OST</p>
+                        <div class="visits">1.6M+</div>
+                    </div>
+                </div>
+                <!-- Game 2 -->
+                <div class="game-card">
+                    <img src="noFilter.webp" alt="Missing Elvira">
+                    <div class="game-info">
+                        <h3>Missing Elvira</h3>
+                        <p>Horror/Creepy OST</p>
+                        <div class="visits">4.2M+</div>
+                    </div>
+                </div>
+                <!-- Game 3 -->
+                <div class="game-card">
+                    <img src="ProjUntote.webp" alt="Project Untote">
+                    <div class="game-info">
+                        <h3>Project Untote</h3>
+                        <p>Epic/War OST</p>
+                        <div class="visits">741.2K+</div>
+                    </div>
+                </div>
+                <!-- Game 4 -->
+                <div class="game-card">
+                    <img src="AreaX.webp" alt="Area X">
+                    <div class="game-info">
+                        <h3>SCP : Area X Roleplay</h3>
+                        <p>Military/Ambient OST</p>
+                        <div class="visits">112.7K+</div>
+                    </div>
+                </div>
+                <!-- Game 5 -->
+                <div class="game-card">
+                    <img src="Omneasia.png" alt="Omneasia">
+                    <div class="game-info">
+                        <h3>Omnéasia</h3>
+                        <p>Fantasy/Epic OST</p>
+                        <div class="visits">Upcoming</div>
+                    </div>
+                </div>
+                <!-- Game 6 -->
+                <div class="game-card">
+                    <img src="CyberLeap.png" alt="CyberLeap">
+                    <div class="game-info">
+                        <h3>CyberLeap</h3>
+                        <p>Adventure/Synthwave OST</p>
+                        <div class="visits">Upcoming</div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
