--- a/index.html
+++ b/index.html
@@ -546,8 +546,8 @@
                     <img src="AreaX.webp" alt="Area X">
                     <div class="game-info">
                         <h3>SCP : Area X Roleplay</h3>
-                        <p>Military/Ambient OST</p>
-                        <div class="visits">112.7K+</div>
+                        <p>Facility/Atmosphere OST</p>
+                        <div class="visits">113.3K+</div>
                     </div>
                 </div>
                 <!-- Game 5 -->
