--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enyss Production - Portfolio</title>
+    <title>Enyss - Portfolio</title>
     <link rel="shortcut icon" href="ENYSSIMG.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
@@ -520,7 +520,7 @@
                     <div class="game-info">
                         <h3>Backrooms Of Reality</h3>
                         <p>Ambient/Liminal OST</p>
-                        <div class="visits">1.9M+</div>
+                        <div class="visits">3.4M+</div>
                     </div>
                 </div>
                 <!-- Game 2 -->
@@ -529,7 +529,7 @@
                     <div class="game-info">
                         <h3>Missing Elvira</h3>
                         <p>Horror/Creepy OST</p>
-                        <div class="visits">4.7M+</div>
+                        <div class="visits">5.7M+</div>
                     </div>
                 </div>
                 <!-- Game 3 -->
@@ -538,7 +538,7 @@
                     <div class="game-info">
                         <h3>Project Untote</h3>
                         <p>Epic/War OST</p>
-                        <div class="visits">2.5M+</div>
+                        <div class="visits">7.8M+</div>
                     </div>
                 </div>
                 <!-- Game 4 -->
@@ -547,7 +547,7 @@
                     <div class="game-info">
                         <h3>SCP : Area X Roleplay</h3>
                         <p>Facility/Atmosphere OST</p>
-                        <div class="visits">188K+</div>
+                        <div class="visits">214K+</div>
                     </div>
                 </div>
                 <!-- Game 5 -->
@@ -572,6 +572,27 @@
         </div>
 
     </div>
+
+    <div class="container" id="experience">
+        <h2>Movies</h2>
+        <p>These are the movies I produced for.</p>
+
+            <div class="game-cards">
+                <!-- movie -->
+                <div class="game-card">
+                    <img src="annetteraymond.webp" alt="Annette et Raymond">
+                    <div class="game-info">
+                        <h3>Annette et Raymond</h3>
+                        <p>Piano OST</p>
+                        
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+    </div>
+
 
     <footer>
         &copy; 2025 Enyss Production - All Rights Reserved.
@@ -698,3 +719,4 @@
 </body>
 
 </html>
+
