--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             <div class="game-cards">
                 <!-- movie -->
                 <div class="game-card">
-                    <img src="annetteraymond.webp" alt="Annette et Raymond">
+                    <img src="annetteraymond.jpg" alt="Annette et Raymond">
                     <div class="game-info">
                         <h3>Annette et Raymond</h3>
                         <p>Piano OST</p>
@@ -719,4 +719,5 @@
 </body>
 
 </html>
+
 
