--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
 }
 
 .audio-card {
-    background: rgba(0,0,0,0.6);
+    background: rgb(0 0 0 / 80%);
     padding: 20px;
-    border-radius: 15px;
+    border-radius: 25px;
     width: 500px;
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(15px);
     box-shadow: 0 10px 25px rgba(0,0,0,0.4);
 }
 
@@ -500,15 +500,15 @@ audio {
     <button class="btn" id="toggleInfo">Show More Details</button>
 
     <div id="infoContent" style="display: none; margin-top: 30px;">
-        <p>Hello! I am Enyss, a dedicated composer and sound designer specializing in creating original soundtracks for video games. <br>
-        My soundtracks are mostly horror/liminal/synthwave themed, but I also produce different other styles such as "epic" and fantasy-sounding music.</p>
+        <p>Hello! I am Enyss, a dedicated composer & sound designer who handles sound design, sfx and original soundtracks for video-games/movies. <br>
+        My soundtracks are in various styles such as fantasy, horror, liminal, synthwave, nintendo-like, ambiant...</p>
     
         <div class="creator-section">
             <div>
-                <p>My first and still continuing today collaboration is with the content creator "Leaf ." on YouTube for his videos about horror stories and video-games like Minecraft, Five Nights at Freddy's, and more. <br><br><br><br><br><br>
+                <p>My first and still continuing today collaboration is with the content creator "Leaf ." on YouTube for his story-telling videos about horror & video-games such as Minecraft, Five Nights at Freddy's and more. <br><br><br><br><br><br>
                   I've been producing for around 5 years on the DAW "FL Studio" & "MPC Beats" with the help of 2 synthetizors from MPC Akai Professional.<br>
-                  I produce for a few games that you can find in the "Experiences" category. My composing process begins with a deep understanding of the game’s narrative, themes, and emotions. I believe that music should not only only complement the gameplay but also elevate the storytelling and make each moment memorable. I work closely with developers to ensure that my soundtracks fit perfectly with the narration of the game.
-                  <br>My prices are very low (if not free) and I also provide pulication of your game soundtracks on streaming plateforms, including Spotify, Apple Music, Youtube Music, Deezer, Tiktok, Instagram and much more !</p>
+                  I produce for a few games that you can find in "Experiences" and movies in "Movies". My composing process begins with a deep understanding of the game’s narrative, themes, and emotions. I believe that music should not only only complement the gameplay but also elevate the storytelling and make each moment memorable. I work closely with developers to ensure that my soundtracks fit perfectly with the narration of the game.
+                  <br>I also provide the pulication of your game soundtracks on streaming plateforms, including Spotify, Apple Music, Youtube Music, Deezer, Tiktok, Instagram and much more !</p>
                 <br>
                 <p>
                     If you wish to contact me, you can find me on every platform :
@@ -533,7 +533,7 @@ audio {
             <div>
                 <img src="leaflogo.jpg" alt="Leaf .">
                 <div class="creator-info">
-                    <p>83.5K Followers 3,508,061 Views</p>
+                    <p>98K Followers 4,254,000 Views</p>
                 </div>
             </div>
           </div>
@@ -605,7 +605,7 @@ audio {
 
     </div>
 
-    <div class="container" id="experience">
+    <div class="container" id="movies">
         <h2>Movies</h2>
         <p>These are the movies I produced for.</p>
 
@@ -789,6 +789,7 @@ toggleBtn.addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
