--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 }
 
 .audio-card {
-    background: rgb(0 0 0 / 80%);
+    background: rgba(0,0,0,0.2);
     padding: 20px;
     border-radius: 25px;
     width: 500px;
@@ -789,6 +789,7 @@ toggleBtn.addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
