--- a/index.html
+++ b/index.html
@@ -2,277 +2,456 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Enyss - Portfolio</title>
-<link rel="shortcut icon" href="ENYSSIMG.png" type="image/x-icon">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enyss - Portfolio</title>
+    <link rel="shortcut icon" href="ENYSSIMG.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+        body {
+            margin: 0;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            background: linear-gradient(135deg, #1e1e1e, #3a3a3a);
+            color: #e8e8e8;
+            text-align: center;
+            scroll-behavior: smooth;
+            overflow: auto;
+        }
 
-<style>
+        #particles-canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            filter: blur(5px);
+        }
 
-/* ================= GLOBAL ================= */
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 50px;
+            background-color: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        }
 
-body {
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.social-logo {
+    font-size: 38px;
+    color: #e8e8e8;
+    transition: transform 0.3s ease, color 0.3s ease;
+    text-decoration: none;
+}
+
+.social-logo:hover {
+    transform: scale(1.2);
+    color: #000000;
+}
+
+#discord-info {
+    margin-top: 10px;
+    padding: 5px;
+    background-color: rgba(29, 29, 29, 0.7);
+    color: #d7d7d7;
+    font-size: 0.9rem;
+    text-align: center;
+    display: none;
+}
+
+#discord-info p {
+    margin: 5px 0;
+}
+
+.hidden {
+    display: none;
+}
+
+        .logo {
+            flex: 1;
+            text-align: left;
+        }
+
+        .logo img {
+            height: 30px;
+        }
+
+        .nav-links {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            gap: 50px;
+            margin: 0 auto;
+        }
+
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        .nav-links a:hover {
+            color: #a212b5;
+        }
+
+        .container {
+            padding: 100px 20px;
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero {
+            margin-top: 80px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .record-player {
+            position: relative;
+            width: 400px;
+            height: 330px;
+            background: #444;
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .vinyl-container {
+            position: relative;
+            width: 300px;
+            height: 300px;
+        }
+
+        .vinyl {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background: radial-gradient(circle, #333 40%, #000 60%);
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            overflow: hidden;
+        }
+
+        .vinyl::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: repeating-radial-gradient(
+                circle,
+                transparent,
+                transparent 2px,
+                rgba(255, 255, 255, 0.1) 2px,
+                rgba(255, 255, 255, 0.1) 4px
+            );
+        }
+
+        .vinyl::after {
+            content: '';
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: radial-gradient(circle, #fff 10%, #ccc 90%);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            border: 5px solid #444;
+        }
+
+        .vinyl-arm {
+            position: absolute;
+            top: -1%;
+            left: 15%;
+            width: 4px;
+            height: 180px;
+            background: #888;
+            transform-origin: left;
+            transform: rotate(-30deg);
+            z-index: 2;
+            border-radius: 2px;
+        }
+
+        .vinyl-arm::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: -6px;
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background: #555;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+        }
+
+        .vinyl-text {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .vinyl-text svg {
+            width: 100%;
+            height: 100%;
+        }
+
+        .vinyl-text text {
+            font-size: 24px;
+            font-weight: bold;
+            fill: #fff;
+            text-transform: uppercase;
+            text-anchor: middle;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        .vinyl:hover {
+            animation: spin 5s linear infinite;
+        }
+
+        .vinyl-text svg {
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .vinyl:hover .vinyl-text svg {
+            animation: spin 5s linear infinite;
+        }
+
+      .audio-showcase {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 40px;
+    align-items: center;
+}
+
+.audio-card {
+    background: rgb(0 0 0 / 80%);
+    padding: 20px;
+    border-radius: 25px;
+    width: 500px;
+    backdrop-filter: blur(15px);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+}
+
+.audio-card h3 {
+    margin-bottom: 15px;
+}
+
+audio {
+    width: 100%;
+}
+      
+.game-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.game-card {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    transform-style: preserve-3d;
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+    cursor: pointer;
+}
+
+.game-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    transition: transform 0.5s ease;
+}
+
+.game-card .game-info {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
+    color: white;
+    text-align: left;
+    transform: translateZ(30px);
+}
+
+.game-card h3 {
     margin: 0;
-    font-family: 'Franklin Gothic Medium','Arial Narrow',Arial,sans-serif;
-    background: linear-gradient(135deg,#1e1e1e,#3a3a3a);
-    color:#e8e8e8;
-    text-align:center;
-    scroll-behavior:smooth;
-    overflow-x:hidden;
+    font-size: 1.5rem;
 }
 
-#particles-canvas{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    z-index:-1;
-    filter:blur(5px);
+.game-card p {
+    margin: 5px 0 0;
+    font-size: 1rem;
+    color: #ccc;
 }
 
-/* ================= NAVBAR ================= */
-
-nav{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding:15px 50px;
-    background-color:rgba(0,0,0,0.5);
-    backdrop-filter:blur(10px);
-    position:fixed;
-    width:100%;
-    top:0;
-    left:0;
-    z-index:1000;
-    box-shadow:0 2px 10px rgba(0,0,0,0.3);
+.game-card:hover {
+    transform: perspective(1000px) rotateX(10deg) rotateY(10deg) scale(1.05);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
 }
 
-.logo{flex:1;text-align:left;}
-.logo img{height:30px;}
-
-.nav-links{
-    flex:1;
-    display:flex;
-    justify-content:center;
-    gap:50px;
-    margin:0 auto;
-    align-items:center;
+.game-card:hover img {
+    transform: scale(1.1);
 }
 
-.nav-links a{
-    color:white;
-    text-decoration:none;
-    font-weight:bold;
-    transition:0.3s;
-    white-space:nowrap;
+.game-card .visits {
+    position: absolute;
+    bottom: 3px;
+    right: 40px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    color: #d0d0d0;
+    font-weight: bold;
 }
 
-.nav-links a:hover{color:#a212b5;}
+        .btn {
+            margin-bottom: 140px;
+            margin-top: 40px;
+            display: inline-block;
+            padding: 12px 30px;
+            background: linear-gradient(135deg, #192C70, #8A2BE2);
+            color: #fff;
+            font-size: 1rem;
+            text-decoration: none;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+            transition: all 0.3s ease;
+            box-shadow: 
+                0 0 10px rgba(25, 44, 112, 0.8),
+                0 0 20px rgba(138, 43, 226, 0.8),
+                0 0 30px rgba(138, 43, 226, 0.6);
+        }
 
-/* ================= SECTIONS ================= */
+        .btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                90deg,
+                transparent,
+                rgba(255, 255, 255, 0.4),
+                transparent
+            );
+            transition: left 0.5s ease;
+        }
 
-.container{
-    padding:100px 20px;
-    position:relative;
-    z-index:1;
-}
+        .btn:hover::before {
+            left: 100%;
+        }
 
-.hero{
-    margin-top:80px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    flex-direction:column;
-}
+        .btn:hover {
+            transform: translateY(-5px) scale(1.05);
+            box-shadow: 
+                0 0 20px rgba(25, 44, 112, 1),
+                0 0 40px rgba(138, 43, 226, 1),
+                0 0 60px rgba(138, 43, 226, 0.8),
+                0 5px 15px rgba(0, 0, 0, 0.3);
+        }
 
-/* ================= VINYL ================= */
+        .btn:active {
+            transform: translateY(0) scale(1);
+        }
 
-.record-player{
-    position:relative;
-    width:400px;
-    height:330px;
-    background:#444;
-    border-radius:10px;
-    box-shadow:0 10px 20px rgba(0,0,0,0.5);
-    display:flex;
-    justify-content:center;
-    align-items:center;
-}
+        #info {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 0 20px;
+            text-align: left;
+        }
 
-.vinyl-container{position:relative;width:300px;height:300px;}
+        #info p {
+            font-size: 1.1rem;
+            line-height: 1.6;
+            margin: 20px 0;
+        }
 
-.vinyl{
-    width:100%;
-    height:100%;
-    border-radius:50%;
-    background:radial-gradient(circle,#333 40%,#000 60%);
-    position:relative;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    box-shadow:0 0 20px rgba(0,0,0,0.5);
-    overflow:hidden;
-}
+        .creator-section {
+            display: flex;
+            align-items: flex-start;
+            gap: 20px;
+            margin: 20px 0;
+        }
 
-.vinyl:hover{animation:spin 5s linear infinite;}
+        .creator-section img {
+            width: 135px;
+            height: auto;
+            border-radius: 100px;
+            transition : width ease 0.3s;
+        }
 
-@keyframes spin{
-    0%{transform:rotate(0deg);}
-    100%{transform:rotate(360deg);}
-}
+        .creator-section img:hover {
+            width: 145px;
+            height: auto;
+            border-radius: 100px;
+        }
 
-/* ================= CARDS ================= */
+        .creator-info {
+            font-size: 0.9rem;
+            color: #999898;
+            font-weight: lighter;
+        }
 
-.game-cards{
-    display:flex;
-    flex-wrap:wrap;
-    justify-content:center;
-    gap:20px;
-    margin-top:30px;
-}
+        footer {
+            background: #111;
+            padding: 20px;
+            font-size: 0.9rem;
+            margin-top: 50px;
+            position: relative;
+            z-index: 1;
+        }
 
-.game-card{
-    position:relative;
-    width:300px;
-    height:400px;
-    border-radius:15px;
-    overflow:hidden;
-    box-shadow:0 10px 20px rgba(0,0,0,0.3);
-    transition:0.5s ease;
-}
-
-.game-card img{
-    width:100%;
-    height:100%;
-    object-fit:cover;
-}
-
-/* ================= AUDIO ================= */
-
-.audio-showcase{
-    display:flex;
-    flex-direction:column;
-    gap:30px;
-    margin-top:40px;
-    align-items:center;
-}
-
-.audio-card{
-    background:rgba(0,0,0,0.2);
-    padding:20px;
-    border-radius:25px;
-    width:500px;
-    backdrop-filter:blur(15px);
-    box-shadow:0 10px 25px rgba(0,0,0,0.4);
-}
-
-audio{width:100%;}
-
-/* ================= BUTTON ================= */
-
-.btn{
-    margin-bottom:140px;
-    margin-top:40px;
-    padding:12px 30px;
-    background:linear-gradient(135deg,#192C70,#8A2BE2);
-    color:#fff;
-    border-radius:5px;
-    border:none;
-    cursor:pointer;
-}
-
-/* ================= FOOTER ================= */
-
-footer{
-    background:#111;
-    padding:20px;
-    font-size:0.9rem;
-    margin-top:50px;
-}
-
-/* ========================================================= */
-/* ================= MOBILE RESPONSIVE ===================== */
-/* ========================================================= */
-
-@media (max-width: 900px){
-
-    nav{
-        padding:15px 20px;
-    }
-
-    .nav-links{
-        gap:20px;
-        font-size:14px;
-    }
-
-    .record-player{
-        width:300px;
-        height:260px;
-    }
-
-    .vinyl-container{
-        width:220px;
-        height:220px;
-    }
-
-    .audio-card{
-        width:90%;
-    }
-
-    .game-card{
-        width:90%;
-        height:350px;
-    }
-
-}
-
-@media (max-width: 600px){
-
-    nav{
-        flex-direction:column;
-        gap:10px;
-        padding:15px;
-    }
-
-    .logo{
-        text-align:center;
-    }
-
-    .nav-links{
-        flex-wrap:wrap;
-        gap:15px;
-        font-size:13px;
-    }
-
-    .container{
-        padding:80px 15px;
-    }
-
-    .record-player{
-        width:250px;
-        height:220px;
-    }
-
-    .vinyl-container{
-        width:180px;
-        height:180px;
-    }
-
-    .audio-card{
-        width:95%;
-        padding:15px;
-    }
-
-    .game-card{
-        width:95%;
-        height:320px;
-    }
-
-}
-
-</style>
+        .footerLogo img { 
+            padding-top: 45px;
+            padding-bottom: 30px;
+            width: 335px;
+            height: auto;
+        }
+        
+    </style>
 </head>
 
 <body>
@@ -610,10 +789,5 @@ toggleBtn.addEventListener('click', () => {
 </body>
 
 </html>
-
-
-
-
-
 
 
