--- a/index.html
+++ b/index.html
@@ -634,14 +634,14 @@ audio {
     <div class="audio-showcase">
         
         <div class="audio-card">
-            <h3>Backrooms Ambient Theme</h3>
+            <h3>Track 1 Test</h3>
             <audio controls controlsList="nodownload">
                 <source src="audio1.mp3" type="audio/mpeg">
             </audio>
         </div>
 
         <div class="audio-card">
-            <h3>Horror Atmosphere Track</h3>
+            <h3>Track 2 Test</h3>
             <audio controls controlsList="nodownload">
                 <source src="audio2.mp3" type="audio/mpeg">
             </audio>
@@ -651,7 +651,7 @@ audio {
 </div>
 
     <footer>
-        &copy; 2025 Enyss Production - All Rights Reserved.
+        &copy; 2026 Enyss Production - All Rights Reserved.
         <br>
         <div class="footerLogo">
             <a href="#"><img src="logoimage.png" alt="Enyss Production"></a>
@@ -791,6 +791,7 @@ toggleBtn.addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
