--- a/index.html
+++ b/index.html
@@ -634,16 +634,23 @@ audio {
     <div class="audio-showcase">
         
         <div class="audio-card">
-            <h3>Track 1 Test</h3>
+            <h3>"Action Theme"</h3>
             <audio controls controlsList="nodownload">
                 <source src="situationtheme.mp3" type="audio/mpeg">
             </audio>
         </div>
 
         <div class="audio-card">
-            <h3>Track 2 Test</h3>
+            <h3>"Warhead Theme"</h3>
             <audio controls controlsList="nodownload">
-                <source src="audio2.mp3" type="audio/mpeg">
+                <source src="warheadtheme.mp3" type="audio/mpeg">
+            </audio>
+        </div>
+
+        <div class="audio-card">
+            <h3>"BERRYBOUNCE"</h3>
+            <audio controls controlsList="nodownload">
+                <source src="berrybounce.mp3" type="audio/mpeg">
             </audio>
         </div>
 
@@ -791,6 +798,7 @@ toggleBtn.addEventListener('click', () => {
 </body>
 
 </html>
+
 
 
 
